# AODSOLVE

./: CMakeLists.txt
include/analysis/: CPGAnnotation.h  enhanced_ast_analyzer.h  integrated_cpg_analyzer.h  loop_vectorization_analyzer.h
include/aod/: enhanced_aod_graph.h  enhanced_aod_node.h  function_inline_rules.h  optimization_rule_system.h  rule_driven_code_generator.h  simd_instruction_rules.h
include/conversion/: enhanced_cpg_to_aod_converter.h
include/generation/: enhanced_code_generator.h
include/tools/: aodsolve_main_analyzer.h
src/analysis/: CPGAnnotation.cpp  enhanced_ast_analyzer.cpp  function_inline_analyzer.cpp  integrated_cpg_analyzer.cpp  loop_vectorization_analyzer.cpp
src/aod/core/: enhanced_aod_graph.cpp  enhanced_aod_node.cpp
src/conversion/: enhanced_cpg_operator_conversion.cpp  enhanced_cpg_to_aod_converter.cpp  optimization_rule_system.cpp  universal_optimization_engine.cpp
src/demo/: enhanced_vectorization_demo.cpp
src/generation/: enhanced_code_generator.cpp
src/tools/: aodsolve_main_analyzer.cpp
